--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100;1,300&display=swap');
-
+* {
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
