--- a/src/models/Data.css
+++ b/src/models/Data.css
@@ -6,8 +6,10 @@ h5 {
     font-family: serif;
     font-size: 40px;
     text-align: center;
+    align-self: center;
 }
 .pokemons-section {
+    margin-top: 20vh;
     width: 100%;
     height: 180vh;
     background: transparent;
