--- a/src/views/Data.css
+++ b/src/views/Data.css
@@ -9,7 +9,7 @@ h5 {
     align-self: center;
 }
 .pokemons-section {
-    margin-top: 20vh;
+    margin-top: 16vh;
     width: 100%;
     height: 180vh;
     background: transparent;
@@ -33,10 +33,20 @@ figure img {
     min-height: 120px;
 }
 .btnAdd {
-    border: none;
+    
     padding: 8px;
     background: #28a745;
     color: white;
     border-radius: 8px;
     font-size: 18px;
 }
+/* .new {
+    height: 5vh;
+    background-color: #28a745;
+    text-align: center;
+    padding: 16px;
+    border-radius: 3%;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+} */
